# RaytoneCodex

./: .gitignore  Package.swift  README.md
.codex/environments/: environment.toml
Schemas/: ClientRequest.json  codex_app_server_protocol.schemas.json  codex_app_server_protocol.v2.schemas.json
Schemas/experimental/: ServerNotification.json  codex_app_server_protocol.schemas.json  codex_app_server_protocol.v2.schemas.json
Schemas/v2/: ThreadForkParams.json  ThreadForkResponse.json  ThreadMemoryMode.json  ThreadMemoryModeSetParams.json  ThreadMemoryModeSetResponse.json  ThreadResumeParams.json  ThreadResumeResponse.json  ThreadStartParams.json  ThreadStartResponse.json  TurnStartParams.json
Sources/RaytoneCodexCoreChecks/: main.swift
docs/: backend-app-server-integration.md  browser-sample.html  claude-design-brief.md  codex-mac-app-reference.md  codex-screens-spec.md  evidence-2026-06-09.md  multi-provider-plan.md  packaging-notarization.md  runtime-wiring-matrix.md
script/: build_and_run.sh  build_codex_from_source.sh  check_app_server_methods.sh  check_runtime_smoke_core.sh  check_schema_matches_binary.sh  check_ui_runtime_wiring.sh  generate_icon.sh  smoke_raytone_proxy.py  test.sh
sidecar/raytone-proxy/: Cargo.toml  NOTICE  config.example.toml
sidecar/raytone-proxy/src/: main.rs  provider.rs
sidecar/raytone-proxy/src/proxy/: error.rs  json_canonical.rs  mod.rs  sse.rs
sidecar/raytone-proxy/src/proxy/providers/: codex.rs  codex_chat_common.rs  codex_chat_history.rs  mod.rs  streaming_codex_chat.rs  transform.rs  transform_codex_chat.rs
(+140 files in other folders)
